# autoflow

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  .test_results.md  CLAUDE.md  COMPLETED_WORK_SUMMARY.md  CONTRIBUTING.md  FAQ.md  FINAL_WORK_SUMMARY.md  MANUAL_CODE_REVIEW_FINDINGS.md  MANUAL_VERIFICATION_SUMMARY.md  PR_MERGE_RESOLUTION_SUMMARY.md  README.es.md  README.ja.md  README.md  README.zh-CN.md  SUBTASK-3-3-COMPLETION-SUMMARY.md  SUBTASK-4-4-VERIFICATION-SUMMARY.md  SUBTASK_3_1_SUMMARY.md  SUBTASK_3_2_SUMMARY.md  SUBTASK_3_3_COMPLETION_SUMMARY.md  SUBTASK_4_4_SUMMARY.md  TEST_RESULTS_SUMMARY.md  TEST_SUITE_VERIFICATION.md  TODO.md  alembic.ini  benchmark_results.py  manual_verification_summary.md  manual_verification_test.py  pyproject.toml  run_bandit_scan.py  tasks.json  test_backward_compat.py  test_cli_spec_list.py  test_manual_verification.py  test_manual_verification_direct.py  test_spec_list.py  test_subtask_3_2.py  test_subtask_3_2_simple.py  (+6 more)
.autoflow/: agent_performance.json  agent_performance_config.json  agents.json  auto_claude_optimization.json  consolidation.json  feedback.json  metrics.json  model_performance.json  quality_trends.json  recovery_learning.json  roi.json  system.json
.autoflow/models/: quality_model.pkl
.autoflow/specs/: integrity-test.md  test-spec.json
.autoflow/specs_archive/: test-spec.json
.autoflow/tasks/: 001-example.json  integrity-test.json  openclaw-autonomy.json  phase2-validation.json  task-test-001.json  test-spec.json  testing-framework-improvements.json
.github/workflows/: ci.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: .gitkeep
autoflow/: __init__.py  autoflow_cli.py  cli.py
autoflow/agents/: __init__.py  base.py  claude_code.py  codex.py  openclaw.py  runner.py  symphony.py  taskmaster.py
autoflow/analysis/: __init__.py  code_similarity.py  duplication_detector.py
autoflow/analytics/: __init__.py  agent_performance.py  cli.py  metrics.py  quality.py  reports.py  roi.py  velocity.py  web.py
autoflow/api/: __init__.py  main.py
autoflow/auth/: __init__.py  audit.py  defaults.py  middleware.py  models.py  rbac.py  session.py  sso.py
autoflow/bmad/: __init__.py  artifacts.py  checkpoint.py  handoff.py  manager.py  templates.py
autoflow/ci/: __init__.py  gates.py  health_check.py  verifier.py
autoflow/cli/: __init__.py  agent.py  ci.py  config.py  duplication.py  init.py  main.py  memory.py  review.py  run.py  run_context.py  scheduler.py  search_tasks.py  skill.py  spec.py  status.py  task.py  utils.py
autoflow/collaboration/: __init__.py  activity.py  conflict.py  models.py  notifications.py  permissions.py  presence.py  review.py  team.py  types.py  workspace.py
autoflow/coordination/: __init__.py  balancer.py  client.py  cluster.py  health.py  node.py  registry.py  server.py  sync.py  work_queue.py
autoflow/core/: __init__.py  commands.py  (+10 more)
backend/: .gitignore  requirements.txt
config/: agents.example.json  agents.example.md  autonomy.example.json  autonomy.example.md  continuous-iteration.example.json  continuous-iteration.example.md  distributed.example.json  duplication.example.json  flaky_tests.json  intake.example.json5  openclaw-workflow.example.json  openclaw-workflow.example.md  parallel.example.json5  pytest_prevention.conf  qa_gates.json  qa_gates.schema.json  rollback.example.json  scheduler_config.json  settings.example.json5  symphony-workflow.example.json5  symphony.example.json5  system.example.json  system.example.md  test_config.json
docs/: AUTO_CLAUDE_PERFORMANCE_GUIDE.md  IMMEDIATE_ACTION_PLAN.md  MEMORY_LEAK_PREVENTION.md  SCHEDULED_TASKS_GUIDE.md  SCHEDULED_TASKS_SUMMARY.md  SPEED_UP_SUMMARY.md  TESTING_FRAMEWORK_ARCHITECTURE.md  TESTING_GUIDE.md  TESTING_IMPROVEMENTS_SUMMARY.md  WEB_UI_IMPROVEMENT_PLAN.md  ai-pipeline-lessons.md  architecture.md  auto-claude-lessons.md  continuous-iteration.md  control-loop.md  custom_skills.md  distributed.md  issue-intake.md  method-stack.md  openclaw-integration.md  phase4-plan.md  phase5-plan.md  recovery-learning.md  symphony-integration.md
examples/: parallel_execution.py
frontend/: .env.example  PROGRESS.md  package-lock.json  package.json
mobile/: App.tsx  app.json  package.json  tsconfig.json
scripts/: agent_runner.py  agent_validation.py  auto_claude_optimization.sh  autoflow.py  autonomy_orchestrator.py  benchmark_config_cache.py  ci_check.sh  cli_healthcheck.py  continuous_iteration.py  coverage_report.py  doctor.py  e2e_verify.py  emergency_cleanup.sh  fix_pr_conflicts.sh  generate_fix_tasks.py  git-auto-commit.sh  git-prepare-branch.sh  integrity.py  maintenance.py  memory_monitor.sh  monitor_auto_claude.sh  predict_quality.py  qa_fix_request.py  quick_performance_fix.sh  run-agent.sh  run_tests.py  scheduled-tasks-demo.sh  scheduled-tasks.sh  scheduler.py  test_framework.py  test_runner.py  tmux-start.sh  train_model.py  validate_readme_flow.py  validate_recovery_loop.py  validate_runtime_loop.py  validate_scheduler_start.py  verify_syntax.py  workflow-dispatch.sh
tests/: __init__.py  conftest.py  test_agent_runner.py  test_analytics_metrics.py  test_analytics_reports.py  test_analytics_velocity.py  test_autoflow_cli_cache.py  test_autoflow_cli_cache_performance.py  test_autonomy_orchestrator.py  test_caching_performance.py  test_ci_gates.py  test_claude_code_adapter.py  test_cli_agent.py  test_cli_ci.py  test_cli_config.py  test_cli_duplication_e2e.py  test_cli_init.py  test_cli_memory.py  test_cli_review.py  test_cli_run.py  test_cli_runs.py  test_cli_sanitization.py  test_cli_scheduler.py  test_cli_skill.py  test_cli_spec.py  test_cli_status.py  test_cli_task.py  test_cluster_integration.py  test_codex_adapter.py  test_collaboration_activity.py  test_collaboration_models.py  test_collaboration_notifications.py  test_collaboration_permissions.py  test_collaboration_presence.py  test_collaboration_workspace.py  test_completion_checker.py  test_config_cache.py  test_config_cache_integration.py  test_conflict_resolver.py  test_continuous_iteration.py  (+51 more)
(+315 files in other folders)
