[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoflow"
version = "0.1.0"
description = "Autoflow - Autonomous AI Development System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Autoflow Team" }
]
keywords = [
    "ai",
    "automation",
    "development",
    "agents",
    "claude",
    "codex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "json5>=0.9.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
autoflow = "autoflow.cli:main"

[project.urls]
Homepage = "https://github.com/autoflow/autoflow"
Documentation = "https://github.com/autoflow/autoflow#readme"
Repository = "https://github.com/autoflow/autoflow"
Issues = "https://github.com/autoflow/autoflow/issues"

[tool.setuptools.packages.find]
include = ["autoflow*"]

[tool.setuptools.package-data]
autoflow = ["py.typed"]

# === Tool Configurations ===

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "B027",   # empty method without abstract decorator (design choice)
    "B904",   # raise without from inside except (handled manually)
    "SIM102", # collapsible if (style preference)
    "SIM105", # suppressible exception (style preference)
    "SIM115", # open file with context handler (style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["autoflow"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "ARG005", "S101", "SIM117"]
"scripts/*" = ["ARG001", "SIM117"]

[tool.mypy]
python_version = "3.11"
# Basic type checking for gradual adoption
# Focus on catching obvious errors without blocking on existing code issues
warn_unused_configs = false
warn_return_any = false
check_untyped_defs = false
# Allow untyped code in existing codebase
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Relaxed checking
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
show_error_codes = true
# Disable specific error codes for existing code compatibility
# These are common in legacy codebases and would require extensive refactoring
disable_error_code = [
    "no-any-return",      # Functions returning Any
    "no-untyped-def",     # Functions without type annotations
    "arg-type",           # Argument type mismatches
    "assignment",         # Assignment type mismatches
    "attr-defined",       # Attribute access on Union types
    "call-arg",           # Missing/extra arguments in calls
    "var-annotated",      # Variables needing type annotations
    "union-attr",         # Attribute access on union types
    "return-value",       # Return value type mismatches
    "index",              # Invalid index operations
    "operator",           # Invalid operator usage
    "misc",               # Miscellaneous type issues
    "dict-item",          # Dict item type mismatches
    "call-overload",      # Function overload mismatches
]

[[tool.mypy.overrides]]
module = [
    "json5.*",
    "apscheduler.*",
    "pydantic.*",
    "joblib.*",
    "numpy.*",
    "sklearn.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["autoflow"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
